--- a/public_html/index.html
+++ b/public_html/index.html
@@ -127,22 +127,22 @@
             <div id="sidebar-menu">
                 <ul>
                     <li>
-                        <a href='#'  class='active'><i class='icon-chart-line'></i><span>Coin Simulator</span> <span class="pull-right"><i class="fa fa-angle-down"></i></span></a>
+                        <a href='./index.html'  class='active'><i class='icon-chart-line'></i><span>Coin Simulator</span> <span class="pull-right"><i class="fa fa-angle-down"></i></span></a>
                     </li>
                     <li class='has_sub'>
                         <a href='#'><i class='fa fa-question'></i><span>Newbie Section</span> <span class="pull-right"><i class="fa fa-angle-down"></i></span></a>
                         <ul>
                             <li>
-                                <a href='javascript:alert("Explicar conceito, vantages e desvantagens.");'><span>What is Bitcoin?</span></a>
+                                <a href='./help.html'><span>What is Bitcoin?</span></a>
                             </li>
                             <li>
-                                <a href='javascript:alert("Guia para utilização de bitcoins.");'><span>Quick Start</span></a>
+                                <a href='./gettingstarted.html'><span>Quick Start</span></a>
                             </li>
                             <li>
                                 <a href='javascript:alert("Falar sobre segurança da moeda e futuro.");'><span>Security and Future</span></a>
                             </li>
                             <li>
-                                <a href='javascript:alert("Outras perguntas.");'><span>FAQ</span></a>
+                                <a href='./faq.html'><span>FAQ</span></a>
                             </li>
                         </ul>
                     </li>
