Cleaned index.js

--- a/public_html/gettingstarted.html
+++ b/public_html/gettingstarted.html
@@ -286,6 +286,6 @@
     <script src="assets/js/apps/calculator.js"></script>
     <script src="assets/js/apps/todo.js"></script>
     <script src="assets/js/apps/notes.js"></script>
-    <script src="assets/js/pages/index2.js"></script>
+    <script src="assets/js/pages/index.js"></script>
 </body>
 </html>
