--- a/public_html/index.html
+++ b/public_html/index.html
@@ -930,7 +930,7 @@
     <script src="assets/js/apps/calculator.js"></script>
     <script src="assets/js/apps/todo.js"></script>
     <script src="assets/js/apps/notes.js"></script>
-    <script src="assets/js/pages/index2.js"></script>
+    <script src="assets/js/pages/index.js"></script>
 	<script src="assets/libs/jquery-icheck/icheck.min.js"></script>
 </body>
 </html>
