--- a/public_html/faq.html
+++ b/public_html/faq.html
@@ -75,34 +75,7 @@
                 <div class="container">
                     <div class="navbar-collapse2">
                         <ul class="nav navbar-nav hidden-xs">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-th"></i></a>
-                                <div class="dropdown-menu grid-dropdown">
-                                    <div class="row stacked">
-                                        <div class="col-xs-4">
-                                            <a href="javascript:;" data-app="notes-app" data-status="active"><i class="icon-edit"></i>Notes</a>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <a href="javascript:;" data-app="todo-app" data-status="active"><i class="icon-check"></i>Todo List</a>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <a href="javascript:;" data-app="calc" data-status="inactive"><i class="fa fa-calculator"></i>Calculator</a>
-                                        </div>
-                                    </div>
-                                    <div class="row stacked">
-                                        <div class="col-xs-4">
-                                            <a href="javascript:;" data-app="weather-widget" data-status="active"><i class="icon-cloud-3"></i>Weather</a>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <a href="javascript:;" data-app="calendar-widget2" data-status="active"><i class="icon-calendar"></i>Calendar</a>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <a href="javascript:;" data-app="stock-app" data-status="inactive"><i class="icon-chart-line"></i>Stocks</a>
-                                        </div>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </li>
+                            
                             <li class="language_bar dropdown hidden-xs">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">English <i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu pull-right">
@@ -129,19 +102,16 @@
                         <a href='./index.html'  ><i class='icon-chart-line'></i><span>Coin Simulator</span> <span class="pull-right"><i class="fa fa-angle-down"></i></span></a>
                     </li>
                     <li class='has_sub'>
-                        <a href='./help.html' class='active'><i class='fa fa-question'></i><span>Newbie Section</span> <span class="pull-right"><i class="fa fa-angle-down"></i></span></a>
+                        <a href='./help.html' ><i class='fa fa-question'></i><span>Newbie Section</span> <span class="pull-right"><i class="fa fa-angle-down"></i></span></a>
                         <ul>
                             <li>
-                                <a href='./help.html'><span>What is Bitcoin?</span></a>
+                                <a href='./faq.html' class='active'><span>What is Bitcoin? <sub>(FAQ)</sub></span></a>
                             </li>
                             <li>
                                 <a href='./gettingstarted.html'><span>Quick Start</span></a>
                             </li>
                             <li>
                                 <a href='javascript:alert("Falar sobre segurança da moeda e futuro.");'><span>Security and Future</span></a>
-                            </li>
-                            <li>
-                                <a href='./faq.html'><span>FAQ</span></a>
                             </li>
                         </ul>
                     </li>
@@ -167,20 +137,19 @@
     <!-- Start right content -->
     <div class="content-page">
         <ol class="breadcrumb">
-            <li><a href="#">Home</a></li><li class="active">Coin Simulator</li></ol>			<!-- ============================================================== -->
+            <li><a href="#">Home</a></li><li class="active">What is Bitcoin? <sub>(FAQ)</sub></li></ol>			<!-- ============================================================== -->
 
 
 <div class="content">
             					<!-- Page Heading Start -->
 				<div class="page-heading">
-            		<h1>What is Bitcoin?</h1>
+            		<h1>What is Bitcoin? <sub>(FAQ)</sub></h1>
             		            	</div>
             	<!-- Page Heading End-->				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-sm-10">
 						<div class="widget">
 							
 							<div class="widget-content padding" style="display: block;">
-								<h3>Questions</h3>
 								<div class="panel-group accordion-toggle" id="accordiondemo">
 								  <div class="panel panel-default">
 								    <div class="panel-heading">
