--- a/public_html/gettingstarted.html
+++ b/public_html/gettingstarted.html
@@ -104,16 +104,13 @@
                         <a href='./help.html' ><i class='fa fa-question'></i><span>Newbie Section</span> <span class="pull-right"><i class="fa fa-angle-down"></i></span></a>
                         <ul>
                             <li>
-                                <a href='./help.html'><span>What is Bitcoin?</span></a>
+                                <a href='./faq.html'><span>What is Bitcoin? <sub>(FAQ)</sub></span></a>
                             </li>
                             <li>
                                 <a class='active' href='./gettingstarted.html'><span>Quick Start</span></a>
                             </li>
                             <li>
                                 <a href='javascript:alert("Falar sobre segurança da moeda e futuro.");'><span>Security and Future</span></a>
-                            </li>
-                            <li>
-                                <a href='./faq.html'><span>FAQ</span></a>
                             </li>
                         </ul>
                     </li>
