--- a/public_html/index.html
+++ b/public_html/index.html
@@ -105,16 +105,13 @@
                         <a href='#'><i class='fa fa-question'></i><span>Newbie Section</span> <span class="pull-right"><i class="fa fa-angle-down"></i></span></a>
                         <ul>
                             <li>
-                                <a href='./help.html'><span>What is Bitcoin?</span></a>
+                                <a href='./faq.html'><span>What is Bitcoin? <sub>(FAQ)</sub></span></a>
                             </li>
                             <li>
                                 <a href='./gettingstarted.html'><span>Quick Start</span></a>
                             </li>
                             <li>
                                 <a href='javascript:alert("Falar sobre segurança da moeda e futuro.");'><span>Security and Future</span></a>
-                            </li>
-                            <li>
-                                <a href='./faq.html'><span>FAQ</span></a>
                             </li>
                         </ul>
                     </li>
@@ -243,50 +240,36 @@
                 <!-- End of info box -->
 
                 <div class="widget">
-                   <div class="widget-header transparent">
-                      <h2><strong>New</strong> User</h2>
-                      <div class="additional-btn">
-                         <a href="#" class="hidden reload"><i class="icon-ccw-1"></i></a>
-                         <a href="#" class="widget-toggle"><i class="icon-down-open-2"></i></a>
-                         <a href="#" class="widget-close"><i class="icon-cancel-3"></i></a>
-                     </div>
-                 </div>
-                 <div class="widget-content padding" style="display: block;">
-                  <form class="form-horizontal" role="form">
-                    <div class="form-group">
-                     <label for="input-text" class="col-sm-2 control-label">ID</label>
-                     <div class="col-sm-10">
-                       <input type="text" class="form-control" id="input-text" placeholder="Name for your test.">
-                   </div>
+                 <div class="widget-header transparent">
+                  <h2><strong>Add</strong> User</h2>
+                  <div class="additional-btn">
+                   <a href="#" class="widget-toggle"><i class="icon-down-open-2"></i></a>
                </div>
+           </div>
+           <div class="widget-content padding" style="display: block;">
+              <form class="form-horizontal" role="form">
+                <div class="form-group">
+                   <div class="col-sm-10">
+                     <input type="text" class="form-control" id="userID" placeholder="Enter user ID...">
+                 </div>
+             </div>
 
-               <div class="form-group">
-                 <label class="col-sm-2 control-label">Number of users</label>
-                 <div class="col-sm-10">
-                    <select class="form-control">
-                      <option>1</option>
-                      <option>10</option>
-                      <option>25</option>
-                      <option>50</option>
-                      <option>100</option>
-                  </select>
-              </div>
-          </div>
-
-          <div class="form-group">
-             <label class="col-sm-2 control-label">Hardware</label>
-             <div class="col-sm-10">
-                <select class="form-control">
-                  <option>a</option>
-                  <option>b</option>
-                  <option>c</option>
-                  <option>d</option>
-                  <option>e</option>
-              </select>
-          </div>
+             <div class="form-group">
+               <div class="col-sm-10">
+                <select class="form-control" id="userHW" >
+                  <option>Choose your hardware...</option>
+                  <option>CPU   (~10 Mh/s)</option>
+                  <option>GPU   (~200 Mh/s)</option>
+                  <option>FPGA  (~400 Mh/s)</option>
+                  <option>ASIC  (~1,200 Gh/s)</option>
+                </select>
+            </div>
       </div>
-      <a class="btn btn-success"><i class="fa fa-plus-circle"></i> Add user</a>
-      <button type="submit" class="btn btn-default"> Cancel </button>
+      <div class="form-group">
+      <div class="col-sm-10">
+      <a class="btn btn-success" id="addUser"><i class="fa fa-plus-circle"></i></a>
+      </div>
+      </div>
 
 
   </form>
@@ -300,21 +283,8 @@
             <div class="widget-header transparent">
                 <h2><i class="icon-chart-line"></i> <strong>Mining</strong> difficulty over time</h2>
                 <div class="additional-btn">
-                    <a href="#" class="hidden reload"><i class="icon-ccw-1"></i></a>
-                    <a class="hidden" id="dropdownMenu1" data-toggle="dropdown">
-                        <i class="fa fa-cogs"></i>
-                    </a>
-                    <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dropdownMenu1">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
-                    <a href="#" class="widget-popout hidden tt" title="Pop Out/In"><i class="icon-publish"></i></a>
-                    <a href="#" class="widget-maximize hidden"><i class="icon-resize-full-1"></i></a>
+
                     <a href="#" class="widget-toggle"><i class="icon-down-open-2"></i></a>
-                    <a href="#" class="widget-close"><i class="icon-cancel-3"></i></a>
                 </div>
             </div>
             <div class="widget-content">
@@ -322,27 +292,12 @@
                     <div class="row stacked">
                         <div class="col-sm-12">
                             <div class="toolbar">
-                                <div class="pull-left">
+                                <div class="pull-right">
                                     <div class="btn-group">
                                         <a href="#" class="btn btn-default btn-xs">Daily</a>
                                         <a href="#" class="btn btn-default btn-xs active">Monthly</a>
                                         <a href="#" class="btn btn-default btn-xs">Yearly</a>
                                     </div>
-                                </div>
-                                <div class="pull-right">
-                                    <div class="btn-group">
-                                        <a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                            Export <i class="icon-down-open-2"></i>
-                                        </a>
-                                        <ul class="dropdown-menu pull-right" role="menu">
-                                            <li><a href="#">Export as PDF</a></li>
-                                            <li><a href="#">Export as CSV</a></li>
-                                            <li><a href="#">Export as PNG</a></li>
-                                            <li class="divider"></li>
-                                            <li><a href="#">Separated link</a></li>
-                                        </ul>
-                                    </div>
-                                    <a href="#" class="btn btn-primary btn-xs"><i class="icon-cog-2"></i></a>
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
@@ -359,90 +314,51 @@
 </div>
 
 <div class="row">
-   <div class="col-md-12">
-      <div class="widget">
-         <div class="widget-header transparent">
-            <h2><strong>Users</strong></h2>
-            <div class="additional-btn">
-               <a href="#" class="hidden reload"><i class="icon-ccw-1"></i></a>
-               <a href="#" class="widget-toggle"><i class="icon-down-open-2"></i></a>
-               <a href="#" class="widget-close"><i class="icon-cancel-3"></i></a>
-           </div>
-       </div>
-       <div class="widget-content">
-        <div class="data-table-toolbar">
-           <div class="row">
-              <div class="col-md-4">
-                 <form role="form">
-                     <input type="text" class="form-control" placeholder="Search...">
-                 </form>
-             </div>
-             <div class="col-md-8">
-                 <div class="toolbar-btn-action">
-                    <a class="btn btn-success"><i class="fa fa-plus-circle"></i> Add new</a>
-                    <a class="btn btn-danger"><i class="fa fa-trash-o"></i> Delete</a>
-                    <a class="btn btn-primary"><i class="fa fa-refresh"></i> Update</a>
-                </div>
-            </div>
-        </div>
-    </div>
+ <div class="col-md-12">
+  <div class="widget">
+   <div class="widget-header transparent">
+    <h2><strong>Users</strong></h2>
+    <div class="additional-btn">
+     <a href="#" class="widget-toggle"><i class="icon-down-open-2"></i></a>
+ </div>
+</div>
+<div class="widget-content">
+    <div class="data-table-toolbar">
 
-    <div class="table-responsive">
-       <table data-sortable="" class="table table-hover table-striped" data-sortable-initialized="true">
-          <thead>
-             <tr>
-                <th>No</th>
-                <th style="width: 30px" data-sortable="false"><div class="icheckbox_square-aero" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" class="rows-check" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins></div></th>
-                <th>ID</th>
-                <th>Number of Users</th>
-                <th>Hardware</th>
-                <th>Status</th>
-            </tr>
-        </thead>
 
-        <tbody>
-         <tr>
-            <td>1</td><td><div class="icheckbox_square-aero" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" class="rows-check" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins></div></td><td><strong>John Doe</strong></td>
-            <td>Yogyakarta, Indonesia</td><td>January 01, 1985</td><td><span class="label label-success">Active</span></td>
-        </tr>
-        <tr>
-            <td>2</td><td><div class="icheckbox_square-aero" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" class="rows-check" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins></div></td><td><strong>Rusmanovski</strong></td>
-            <td>Bali, Indonesia</td><td>september 21, 1995</td><td><span class="label label-success">Active</span></td>
-        </tr>
-        <tr>
-            <td>3</td><td><div class="icheckbox_square-aero" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" class="rows-check" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins></div></td><td><strong>Annisa</strong></td>
-            <td>London, UK</td><td>September 23, 1996</td><td><span class="label label-success">Active</span></td>
-        </tr>
-        <tr>
-            <td>4</td><td><div class="icheckbox_square-aero" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" class="rows-check" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins></div></td><td><strong>Ari Rusmanto</strong></td>
-            <td>Jakarta, Indonesia</td><td>January 01, 1990</td><td><span class="label label-success">Active</span></td>
-        </tr>
-        <tr>
-            <td>5</td><td><div class="icheckbox_square-aero" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" class="rows-check" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins></div></td><td><strong>Jenny Doe</strong></td>
-            <td>New York, US</td><td>March 11, 1975</td></td><td><span class="label label-danger">Suspended</span></td>
-        </tr>
-        <tr>
-            <td>6</td><td><div class="icheckbox_square-aero" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" class="rows-check" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins></div></td><td><strong>Hana Sartika</strong></td>
-            <td>Semarang, Indonesia</td><td>June 23, 1991</td><td><span class="label label-success">Active</span></td>
-        </tr>
 
-    </tbody>
+<div class="table-responsive">
+ <table data-sortable="" id="userTable" class="table table-hover table-striped" data-sortable-initialized="true">
+  <thead>
+   <tr>
+    <th>ID</th>
+    <th>Hardware</th>
+    <th>Wallet (BTC)</th>
+    <th>Status</th>
+</tr>
+</thead>
+
+<tbody>
+   <!--tr>
+    <td>1</td><td><strong>John Doe</strong></td>
+    <td>CPU</td><td>0.0</td><td><span class="label label-success">Active</span></td>
+</tr-->
+
+<tr>
+    <td><strong>-</strong></td>
+    <td>-</td><td>-</td><td><span class="label label-success">------------</span></td>
+</tr-->
+
+</tbody>
 </table>
 </div>
-
+</div>
+</div>
 <div class="data-table-toolbar">
-   <ul class="pagination">
-     <li class="disabled"><a href="#">«</a></li>
-     <li class="active"><a href="#">1</a></li>
-     <li><a href="#">2</a></li>
-     <li><a href="#">3</a></li>
-     <li><a href="#">4</a></li>
-     <li><a href="#">5</a></li>
-     <li><a href="#">»</a></li>
- </ul>
+
 </div>
 </div>
-</div>
+
 
 
 
