more text in faq

--- a/public_html/faq.html
+++ b/public_html/faq.html
@@ -211,13 +211,13 @@
 								    <div class="panel-heading">
 								      <h4 class="panel-title">
 								        <a data-toggle="collapse" data-parent="#accordiondemo" href="#accordion5" class="collapsed" aria-expanded="false">
-								          What is a Bitcoin Public Address?
+							             What is a Bitcoin Public Address?
 								        </a>
 								      </h4>
 								    </div>
 								    <div id="accordion5" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+							            A bitcoin "Address" is nothing more than a pairing of a public key (which you share with people to receive money, think of your public key as INBOUND ONLY traffic) and a private key (which cryptographically links to your public key, allowing you to spend said funds, OUTBOUND traffic). 
 								      </div>
 								    </div>
 								  </div>
@@ -231,7 +231,9 @@
 								    </div>
 								    <div id="accordion6" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        A private key in the context of Bitcoin is a secret number that allows bitcoins to be spent. Every Bitcoin wallet contains one or more private keys, which are saved in the wallet file. The private keys are mathematically related to all Bitcoin addresses generated for the wallet.
+
+                                        Because the private key is the "ticket" that allows someone to spend bitcoins, it is important that these are kept secure. Private keys can be kept on computer files, but in some cases are also short enough that they can be printed on paper.
 								      </div>
 								    </div>
 								  </div>
@@ -245,7 +247,7 @@
 								    </div>
 								    <div id="accordion7" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        A Bitcoin wallet is a file that contains a collection of private keys.
 								      </div>
 								    </div>
 								  </div>
@@ -259,7 +261,18 @@
 								    </div>
 								    <div id="accordion8" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        Bitcoin Core <br>
+                                        Bither <br>
+                                        GreenBits <br>
+                                        MultiBit HD <br>
+                                        Armory <br>
+                                        Electrum <br>
+                                        mSIGNA <br>
+                                        Bitcoin Wallet <br>
+                                        breadwallet <br>
+                                        Green Address <br>
+                                        Coinomi <br>
+                                        Copay <br>
 								      </div>
 								    </div>
 								  </div>
@@ -274,7 +287,8 @@
 								    </div>
 								    <div id="accordion9" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        Bitcoin can be coldly unforgiving of mistakes, and nowhere is this better demonstrated than with change addresses. Although change addresses provide a key privacy tool, they can also lead to confusion, loss, or theft when not understood.
+                                        When the output of a transaction is used as the input of another transaction, it must be spent in its entirety. Sometimes the coin value of the output is higher than what the user wishes to pay. In this case, the client generates a new Bitcoin address, and sends the difference back to this address. This is known as change.
 								      </div>
 								    </div>
 								  </div>
@@ -288,7 +302,12 @@
 								    </div>
 								    <div id="accordion10" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        Step 1 - Get The Best Bitcoin Mining Hardware <br><br>
+                                        Step 2 - Download Free Bitcoin Mining Software <br>
+                                        Bitcoin mining, but the two most popular are CGminer and BFGminer which are command line programs.
+                                        <br>
+                                        <br>Step 3 - Join a Bitcoin Mining Pool <br>
+                                        Bitcoin mining pools are groups of Bitcoin miners working together to solve a block and share in it's rewards. Without a Bitcoin mining pool, you might mine bitcoins for over a year and never earn any bitcoins. It's far more convenient to share the work and split the reward with a much larger group of Bitcoin miners. For a fully decentralized pool, we highly recommend p2pool.
 								      </div>
 								    </div>
 								  </div>
@@ -349,7 +368,9 @@
 								    </div>
 								    <div id="accordion14" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        Elliptic Curve Cryptography (ECC)  an alternative mechanism for implementing public-key cryptography. Public-key algorithms create a mechanism for sharing keys among large numbers of participants or entities in a complex information system. Unlike other popular algorithms such as RSA, ECC is based on discrete logarithms that is much more difficult to challenge at equivalent key lengths.
+
+                                        At the time of its discovery, the ECC algorithm was described and placed in the public domain. What others found was that while it offered greater potential security it was slow. Certicom focused its efforts on creating better implementations of the algorithm to improve its performance. After many years of research, Certicom introduced the first commercial toolkit to support ECC and make it practical for use in a variety of applications.
 								      </div>
 								    </div>
 								  </div>
@@ -363,7 +384,16 @@
 								    </div>
 								    <div id="accordion15" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        Payment freedom 
+                                        <br>
+                                        Choose your own fees
+                                        <br>
+                                        Fewer risks for merchants 
+                                        <br>
+                                        Security and control 
+                                        <br>
+                                        Transparent and neutral
+                                        <br>
 								      </div>
 								    </div>
 								  </div>
@@ -377,7 +407,9 @@
 								    </div>
 								    <div id="accordion16" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        Degree of acceptance <br>
+                                        Volatility <br>
+                                        Ongoing development <br>
 								      </div>
 								    </div>
 								  </div>
@@ -392,7 +424,8 @@
 								    </div>
 								    <div id="accordion17" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        Trusting the maths of Bitcoin makes sense. Most of the computer code behind it is publicly available, meaning it has been checked over by lots of programmers. The algorithm that limits the supply of coins also verifies transactions between anonymous users. So there is a record of when the coins are bought and sold.
+                                        Much of the trust in Bitcoin comes from the fact that it requires no trust at all. Bitcoin is fully open-source and decentralized. This means that anyone has access to the entire source code at any time. Any developer in the world can therefore verify exactly how Bitcoin works. All transactions and bitcoins issued into existence can be transparently consulted in real-time by anyone. All payments can be made without reliance on a third party and the whole system is protected by heavily peer-reviewed cryptographic algorithms like those used for online banking. No organization or individual can control Bitcoin, and the network remains secure even if not all of its users can be trusted.
 								      </div>
 								    </div>
 								  </div>
@@ -406,7 +439,9 @@
 								    </div>
 								    <div id="accordion18" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        Because of the law of supply and demand, when fewer bitcoins are available the ones that are left will be in higher demand, and therefore will have a higher value. So, as Bitcoins are lost, the remaining bitcoins will eventually increase in value to compensate. As the value of a bitcoin increases, the number of bitcoins required to purchase an item decreases. This is a deflationary economic model. As the average transaction size reduces, transactions will probably be denominated in sub-units of a bitcoin such as millibitcoins ("Millies") or microbitcoins ("Mikes").
+                                        The Bitcoin protocol uses a base unit of one hundred-millionth of a Bitcoin ("a Satoshi"), but unused bits are available in the protocol fields that could be used to denote even smaller subdivisions.
+                                        When a user loses his wallet, it has the effect of removing money out of circulation. Lost bitcoins still remain in the block chain just like any other bitcoins. However, lost bitcoins remain dormant forever because there is no way for anybody to find the private key(s) that would allow them to be spent again. Because of the law of supply and demand, when fewer bitcoins are available, the ones that are left will be in higher demand and increase in value to compensate.
 								      </div>
 								    </div>
 								  </div>
@@ -420,7 +455,7 @@
 								    </div>
 								    <div id="accordion19" class="panel-collapse collapse" style="height: 0px;" aria-expanded="false">
 								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								        The Bitcoin network can already process a much higher number of transactions per second than it does today. It is, however, not entirely ready to scale to the level of major credit card networks. Work is underway to lift current limitations, and future requirements are well known. Since inception, every aspect of the Bitcoin network has been in a continuous process of maturation, optimization, and specialization, and it should be expected to remain that way for some years to come. As traffic grows, more Bitcoin users may use lightweight clients, and full network nodes may become a more specialized service.
 								      </div>
 								    </div>
 								  </div>
