security and future, changeable user status

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -114,7 +114,7 @@
                             <a href='./gettingstarted.html'><span>Quick Start</span></a>
                         </li>
                         <li>
-                            <a href='javascript:alert("Falar sobre segurança da moeda e futuro.");'><span>Security and Future</span></a>
+                            <a href='securityandfuture.html'><span>Security and Future</span></a>
                         </li>
                     </ul>
                 </li>
