Added security and future.

--- a/public_html/securityandfuture.html
+++ b/public_html/securityandfuture.html
@@ -145,8 +145,17 @@
                 <div class="col-sm-9">
                     <div class="widget">
                         <div class="widget-content padding" style="display: block;" id="divSecurity">
-                            <h1>Security</h1>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
+                            <h1>SECURITY</h1>
+                            <h3>GENERAL INFORMATION</h3>
+                            <p>Bitcoin uses SHA-256 encryption for both its Proof-of-Work, which is a fancy way of saying data that is really hard to difficult to create but easy to verify that it is indeed the data that we need, and its transaction verification system. What people sometimes overlook is the security that is established by its transaction blockchain.</p>
+
+                            <h3>TRANSACTION BLOCKCHAIN</h3>
+                            <p>The transaction blockchain is in short just a chain of multiple blocks containing all the history of transactions of the network. It starts with what is known as the 'Genesis Block', the first block on the network, and new blocks are added when hases are solved and transactions done.</p>
+
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Blockchain.svg">
+                            <p>The best chain (black) consists of the longest series of transaction records from the genesis block (green) to the current block or record. Orphaned records (purple) exist outside of the best chain.</p>
+
+                            <p>The transaction blockchain helps by keeped a record of all bitcoin transactions so that no coin can be duplicated. The method has been discussed extensively and 'proven' as secure. The main problem with bitcoin security relies in Human misusage. Some documented cases are for example the Inputs.io case, it was a Bitcoin wallet service which was hacked twice. A total of 4,100 Bitcoins which at the time where worth approximately 1.2 million USD were stolen via a socieal engineering attack, gaining access to the system hosted on Linode. The hacker gained access to email accounts including the creator of Inputs.io and got a hold of the system. Mt. Gox, the leading Bitcoin exchange service in the past, suffered a Distributed Denial of Service attack and froze its transactions followed by a claim of bankruptcy after have lost 468 million USD worth of Bitcoins that came from the attackers taking advantage of the fact that transactions coming out of Mt. Gox were not protected from an exploit in Bitcoin's Transactions which was known and fixed by other Bitcoin exchanges at the time. All this 'accidents' show us that while security may be an issue, it is not an issue that is in the Bitcoin protocol but on how people and other entities use the network.</p>
                         </div>
                         <hr>
                     </div>
@@ -157,8 +166,8 @@
                 <div class="col-sm-9">
                     <div class="widget">
                         <div class="widget-content padding" style="display: block;" id="divFuture">
-                            <h1>Future</h1>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
+                            <h1>THE FUTURE?</h1>
+                            <p>With the fall of Mt. Gox in 2013 the leading Bitcoin exchanges began to claim the need for appropriate and independently audited safety measures and more transparency and accountability which is leading to a more secure world for Bitcoin. Regulations are taking place to ensure the security for everyone involved, and while regulating the network is seen as going against the original spirit of Bitcoin the network is adapting.</p>
                         </div>
                         <hr>
                     </div>
