fix some questions

--- a/public_html/faq.html
+++ b/public_html/faq.html
@@ -162,6 +162,9 @@
 								    <div id="accordion1" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
 								      <div class="panel-body">
 								        Bitcoin is a form of digital currency, created and held electronically. No one controls it. Bitcoins aren’t printed, like dollars or euros.
+                                        Bitcoin can be used to buy things electronically. In that sense, it’s like conventional dollars, euros, or yen, which are also traded digitally.
+                                        <br>
+                                        However, bitcoin’s most important characteristic, and the thing that makes it different to conventional money, is that it is decentralized. No single institution controls the bitcoin network. This puts some people at ease, because it means that a large bank can’t control their money.
 								      </div>
 								    </div>
 								  </div>
@@ -176,6 +179,7 @@
 								    <div id="accordion2" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
 								      <div class="panel-body">
 								        Bitcoin is a digital asset and a payment system invented by Satoshi Nakamoto, who published the invention in 2008 and released it as open-source software in 2009.
+                                        <br>Satoshi Nakamoto is the pseudonym of a person or group of people who created the bitcoin protocol and reference software.
 								      </div>
 								    </div>
 								  </div>
