--- a/public_html/index.html
+++ b/public_html/index.html
@@ -161,7 +161,7 @@
                 <form class="form-horizontal" role="form">
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="userID" placeholder="Enter user ID...">
+                            <input type="text" class="form-control" id="userID" value="1" disabled>
                         </div>
                     </div>
 
