notifications for coin simulator

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -204,13 +204,13 @@
                             <div class="row stacked">
                                 <div class="col-sm-12">
                                     <div class="toolbar">
-                                        <div class="pull-right">
+                                        <!--div class="pull-right">
                                             <div class="btn-group">
                                                 <a href="#" class="btn btn-default btn-xs">Daily</a>
                                                 <a href="#" class="btn btn-default btn-xs active">Monthly</a>
                                                 <a href="#" class="btn btn-default btn-xs">Yearly</a>
                                             </div>
-                                        </div>
+                                        </div-->
                                         <div class="clearfix"></div>
                                     </div>
                                     <div class="clearfix"></div>
@@ -330,6 +330,10 @@
 <script src="assets/js/apps/calculator.js"></script>
 <script src="assets/js/apps/todo.js"></script>
 <script src="assets/js/apps/notes.js"></script>
+<script src="assets/libs/jquery-notifyjs/notify.min.js"></script>
+<link href="assets/libs/jquery-notifyjs/styles/metro/notify-metro.css" rel="stylesheet" type="text/css">
+<script src="assets/libs/jquery-notifyjs/styles/metro/notify-metro.js"></script>
+<script src="assets/js/pages/notifications.js"></script>
 <script src="assets/js/pages/index.js"></script>
 <script src="assets/libs/jquery-icheck/icheck.min.js"></script>
 </body>
